{
  "version": 4,
  "terraform_version": "0.14.0",
  "serial": 17,
  "lineage": "404efb3e-d6ed-4bb4-61f0-b9d3ac56503f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "django_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-049b31ebaf32c5fbf",
            "domain": "vpc",
            "id": "eipalloc-03bef6b968edc6a84",
            "instance": "i-0500264278ce208de",
            "network_border_group": "us-east-2",
            "network_interface": "eni-000f5e46cc7124209",
            "private_dns": "ip-10-0-100-200.us-east-2.compute.internal",
            "private_ip": "10.0.100.200",
            "public_dns": "ec2-3-135-159-113.us-east-2.compute.amazonaws.com",
            "public_ip": "3.135.159.113",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "data.aws_ami.my_ami",
            "module.my_ec2.aws_instance.this",
            "module.my_ec2.aws_spot_instance_request.this",
            "module.my_sg.aws_security_group.this",
            "module.my_sg.aws_security_group.this_name_prefix",
            "module.my_vpc.aws_subnet.public",
            "module.my_vpc.aws_vpc.this",
            "module.my_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.my_ec2[0]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0443305dabd4be2bc",
            "arn": "arn:aws:ec2:us-east-2:021510583954:instance/i-0500264278ce208de",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0500264278ce208de",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ec2-user-publickey",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-000f5e46cc7124209",
            "private_dns": "ip-10-0-100-200.us-east-2.compute.internal",
            "private_ip": "10.0.100.200",
            "public_ip": "13.59.251.187",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-05458cb7f89afdb3b",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-069f902f5f9cb7e35",
            "tags": {
              "Name": "django_server"
            },
            "tags_all": {
              "Name": "django_server"
            },
            "tenancy": "default",
            "timeouts": {
            },
            "volume_tags": {
              "Name": "django_server"
            },
            "vpc_security_group_ids": [
              "sg-01e249f410727ef5c"
            ]
          },
          "dependencies": [
            "data.aws_ami.my_ami",
            "module.my_sg.aws_security_group.this",
            "module.my_sg.aws_security_group.this_name_prefix",
            "module.my_vpc.aws_subnet.public",
            "module.my_vpc.aws_vpc.this",
            "module.my_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.my_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:021510583954:security-group/sg-01e249f410727ef5c",
            "description": "Security group for web_server and ssh access",
            "egress": [],
            "id": "sg-01e249f410727ef5c",
            "ingress": [],
            "name": "my-sg-20210827154807067800000001",
            "name_prefix": "my-sg-",
            "owner_id": "021510583954",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "my-sg"
            },
            "tags_all": {
              "Name": "my-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e81adc66112efdde"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my_vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.my_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "All protocols",
            "from_port": -1,
            "id": "sgrule-720141385",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-01e249f410727ef5c",
            "self": false,
            "source_security_group_id": null,
            "to_port": -1,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my_sg.aws_security_group.this",
            "module.my_sg.aws_security_group.this_name_prefix",
            "module.my_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.my_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "SSH",
            "from_port": 22,
            "id": "sgrule-2680880150",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-01e249f410727ef5c",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my_sg.aws_security_group.this",
            "module.my_sg.aws_security_group.this_name_prefix",
            "module.my_vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "HTTP",
            "from_port": 80,
            "id": "sgrule-692101539",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-01e249f410727ef5c",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my_sg.aws_security_group.this",
            "module.my_sg.aws_security_group.this_name_prefix",
            "module.my_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:021510583954:internet-gateway/igw-05a8181a934508c3c",
            "id": "igw-05a8181a934508c3c",
            "owner_id": "021510583954",
            "tags": {
              "Name": "django-vpc"
            },
            "tags_all": {
              "Name": "django-vpc"
            },
            "vpc_id": "vpc-0e81adc66112efdde"
          },
          "dependencies": [
            "module.my_vpc.aws_vpc.this",
            "module.my_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-05a8181a934508c3c",
            "id": "r-rtb-042be8ce17a6f9ed01080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-042be8ce17a6f9ed0",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my_vpc.aws_internet_gateway.this",
            "module.my_vpc.aws_route_table.public",
            "module.my_vpc.aws_vpc.this",
            "module.my_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:021510583954:route-table/rtb-041ceb41d7cf5e1a3",
            "id": "rtb-041ceb41d7cf5e1a3",
            "owner_id": "021510583954",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "django-vpc-private-us-east-2a"
            },
            "tags_all": {
              "Name": "django-vpc-private-us-east-2a"
            },
            "vpc_id": "vpc-0e81adc66112efdde"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my_vpc.aws_vpc.this",
            "module.my_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:021510583954:route-table/rtb-042be8ce17a6f9ed0",
            "id": "rtb-042be8ce17a6f9ed0",
            "owner_id": "021510583954",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "django-vpc-public"
            },
            "tags_all": {
              "Name": "django-vpc-public"
            },
            "vpc_id": "vpc-0e81adc66112efdde"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my_vpc.aws_vpc.this",
            "module.my_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-096946c89c135c59a",
            "route_table_id": "rtb-041ceb41d7cf5e1a3",
            "subnet_id": "subnet-06881b9c585dbe946"
          },
          "dependencies": [
            "module.my_vpc.aws_route_table.private",
            "module.my_vpc.aws_subnet.private",
            "module.my_vpc.aws_vpc.this",
            "module.my_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ee0a57428d40bf38",
            "route_table_id": "rtb-042be8ce17a6f9ed0",
            "subnet_id": "subnet-069f902f5f9cb7e35"
          },
          "dependencies": [
            "module.my_vpc.aws_route_table.public",
            "module.my_vpc.aws_subnet.public",
            "module.my_vpc.aws_vpc.this",
            "module.my_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:021510583954:subnet/subnet-06881b9c585dbe946",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-06881b9c585dbe946",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "021510583954",
            "tags": {
              "Name": "django-vpc-private-us-east-2a"
            },
            "tags_all": {
              "Name": "django-vpc-private-us-east-2a"
            },
            "vpc_id": "vpc-0e81adc66112efdde"
          },
          "dependencies": [
            "module.my_vpc.aws_vpc.this",
            "module.my_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:021510583954:subnet/subnet-069f902f5f9cb7e35",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.100.0/24",
            "id": "subnet-069f902f5f9cb7e35",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "021510583954",
            "tags": {
              "Name": "django-vpc-public-us-east-2a"
            },
            "tags_all": {
              "Name": "django-vpc-public-us-east-2a"
            },
            "vpc_id": "vpc-0e81adc66112efdde"
          },
          "dependencies": [
            "module.my_vpc.aws_vpc.this",
            "module.my_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:021510583954:vpc/vpc-0e81adc66112efdde",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-05d4c284e616946dd",
            "default_route_table_id": "rtb-09bc3f46c7185ec66",
            "default_security_group_id": "sg-0715dc9096dcd5fea",
            "dhcp_options_id": "dopt-07de75f960f96528a",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0e81adc66112efdde",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-09bc3f46c7185ec66",
            "owner_id": "021510583954",
            "tags": {
              "Name": "django-vpc"
            },
            "tags_all": {
              "Name": "django-vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}